swagger api 작업